--- a/.env.example
+++ b/.env.example
@@ -7,16 +7,18 @@ WUZAPI_GLOBAL_WEBHOOK=https://yourdomain.com/webhook
 WEBHOOK_FORMAT=json
 SESSION_DEVICE_NAME=WuzAPI
 
-# Database Configuration - These will be provided by EasyPanel
-DB_USER=wuzapi
-DB_PASSWORD=your_db_password
-DB_NAME=wuzapi
-DB_HOST=your_db_host
-DB_PORT=5432
-DB_SSLMODE=false
-
 # Timezone
 TZ=America/Sao_Paulo
+
+# Database Configuration
+# For SQLite (file-based, default): leave all DB_* variables empty/unset
+# For PostgreSQL: set all DB_* variables below
+# DB_USER=wuzapi
+# DB_PASSWORD=your_db_password
+# DB_NAME=wuzapi
+# DB_HOST=your_postgres_host
+# DB_PORT=5432
+# DB_SSLMODE=false
 
 # RabbitMQ (Optional)
 RABBITMQ_URL=amqp://wuzapi:wuzapi@localhost:5672/%2F
