--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
+    command: printenv
     environment:
       # WuzAPI Configuration
       - WUZAPI_PORT=8080
